# replit-property-brief

./: .gitignore  .replit  Dockerfile  Dockerfile.django  README.md  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  start.sh  vitest.config.ts
attached_assets/: Pasted-git-push-Enumerating-objects-63-done-Counting-objects-1_1774395941347.txt  Pasted-in-import-module-n-return-bootstrap-gcd-import-name-lev_1774397152249.txt
aws/: deploy.sh  infrastructure.yml  service.yml
backend/: create_admin.py  manage.py  run_migrations.py
backend/documents/: auth_backend.py  cache_utils.py  exceptions.py  middleware.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
backend/documents/migrations/: 0001_initial.py  0002_add_email_draft.py  0002_document_storage_path.py  0003_change_ai_analysis_to_json.py  0003_document_share_token.py  0004_add_folder_parent.py  0004_add_password_reset_token.py  0005_add_clerk_id.py  0005_alter_user_role_teamjoinrequest.py  0006_alter_user_email.py  0006_folder_favorited_by.py  0007_add_is_private_to_document.py  0007_folder_is_archived.py  0008_add_admin_request.py  0008_combinedanalysis_favorited_by.py  0009_add_credit_system.py  0009_document_owner_created_at_indexes.py  0010_add_document_favorites.py  (+5 more)
backend/docvault/: settings.py  wsgi.py
backend/property_brief/: settings.py  test_settings.py  urls.py  wsgi.py
client/: index.html
client/src/: App.tsx  index.css  main.tsx
memory/: MEMORY.md
server/: analyze.ts  db.ts  index.ts  routes.ts
shared/: schema.ts
(+28 files in other folders)
